# dsp-dispatch

./: .gitignore  404.html  CMakeLists.txt  Makefile  PLAN.md  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: benchmarks.yml
assets/: bench-data.js
backends/: index.html
bench/: CMakeLists.txt  bench_fft.cpp  bench_fir.cpp
bench/backends/fftw/: fftw_backend.cpp
bench/backends/kfr/: fir_kfr_backend.cpp  kfr_backend.cpp
benchmarks/: index.html
cmake/: FetchAOCL.cmake  FetchArmPL.cmake  FetchCMSISDSP.cmake  FetchFFTW.cmake  FetchIPP.cmake  FetchLiquidDSP.cmake  FetchMKL.cmake  FetchPocketFFT.cmake  PatchAoclUninstall.cmake
docs/: backends.md  benchmarks.md  fir-algorithm-selection.md  getting-started.md  index.md  requirements.md
docs/assets/: bench-data.js  dashboard.js  extra.css
getting-started/: index.html
include/fft/: fft.h
include/fir/: fir.h
main/: index.html
main/arm/: fft_results.md  fir_results.md
main/x86/: fft_results.md  fir_results.md
requirements/: index.html
search/: search_index.json
src/backends/aocl/: aocl_backend.cpp
src/backends/armpl/: armpl_backend.cpp
src/backends/cmsis/: cmsis_backend.cpp  cmsis_fir_backend.cpp
src/backends/ipp/: ipp_fir_backend.cpp
src/backends/liquid/: liquid_fir_backend.cpp
src/backends/mkl/: mkl_backend.cpp
src/backends/pocketfft/: pocketfft_backend.cpp
src/backends/portable/: fft_engine.h  fir_backend.cpp  portable_backend.cpp
src/backends/vdsp/: vdsp_backend.cpp
src/common/: backend.h  fft.cpp  fir.cpp  fir_backend.h
tests/: CMakeLists.txt  test_fft.cpp  test_fir.cpp
tools/: build_dashboard.py  run_benchmarks.py
